package vn.edu.fpt.entity;

import jakarta.persistence.*;
import lombok.*;
import lombok.experimental.SuperBuilder;
import vn.edu.fpt.enums.PaymentStatus;

import java.math.BigDecimal;
import java.time.LocalDateTime;

@Getter
@Setter
@NoArgsConstructor
@AllArgsConstructor
@SuperBuilder
@Entity
@Table(name = "payments")
public class Payment extends BaseEntity {

    @OneToOne(fetch = FetchType.LAZY)
    @JoinColumn(name = "order_id", nullable = false, unique = true)
    private Order order;

    /**
     * Payment gateway: PAYOS, MOMO, VNPAY, etc.
     */
    @Column(length = 50, nullable = false)
    private String gateway;

    /**
     * Unique order code from payment gateway (PayOS, Momo, VNPay, etc.)
     * This is the unique identifier for the transaction at the gateway
     */
    @Column(name = "gateway_order_code", length = 255, nullable = false, unique = true)
    private String gatewayOrderCode;

    /**
     * Payment amount in VND
     */
    @Column(nullable = false, precision = 10, scale = 2)
    private BigDecimal amount;

    /**
     * Payment link generated by PayOS
     */
    @Column(name = "payment_url", length = 1000)
    private String paymentUrl;

    /**
     * Dynamic QR code URL from PayOS for mobile payment
     */
    @Column(name = "qr_code_url", length = 1000)
    private String qrCodeUrl;

    /**
     * Payment status: PENDING, PAID, FAILED, EXPIRED, CANCELLED
     * Synchronized with PayOS webhook
     */
    @Enumerated(EnumType.STRING)
    @Column(length = 20, nullable = false)
    private PaymentStatus status;

    /**
     * Error code from payment gateway if payment fails
     */
    @Column(name = "error_code", length = 50)
    private String errorCode;

    /**
     * Error message from payment gateway if payment fails
     */
    @Column(name = "error_message", length = 500)
    private String errorMessage;

    /**
     * Full JSON response from payment gateway for debugging
     * Stores complete response from PayOS API
     */
    @Column(name = "gateway_response", columnDefinition = "NVARCHAR(MAX)")
    private String gatewayResponse;

    /**
     * Flag indicating whether webhook has been received from payment gateway
     */
    @Builder.Default
    @Column(name = "webhook_received", nullable = false)
    private Boolean webhookReceived = false;

    /**
     * Timestamp when webhook was received from payment gateway
     */
    @Column(name = "webhook_received_at")
    private LocalDateTime webhookReceivedAt;

    /**
     * Timestamp when payment link expires
     * After this time, the QR code and payment link are no longer valid
     */
    @Column(name = "expired_at")
    private LocalDateTime expiredAt;

    /**
     * Timestamp when payment was successfully completed
     */
    @Column(name = "paid_at")
    private LocalDateTime paidAt;

    /**
     * Virtual account number generated by PayOS for this transaction
     */
    @Column(name = "account_number", length = 100)
    private String accountNumber;

    /**
     * Exact transfer content/description generated by PayOS for this transaction
     */
    @Column(name = "description", length = 500)
    private String description;

    /**
     * Bank name from PayOS (e.g., MB Bank)
     */
    @Column(name = "bank_name", length = 100)
    private String bankName;

    /**
     * Account holder name from PayOS
     */
    @Column(name = "account_holder", length = 255)
    private String accountHolder;

    /**
     * Timestamp of the last sync with PayOS.
     * Used to avoid querying the same payment too frequently during scheduled sync tasks.
     * Null until the first sync attempt.
     */
    @Column(name = "last_synced_at")
    private LocalDateTime lastSyncedAt;

    /**
     * Retry counter for webhook processing.
     * Tracks how many times we attempted to process or retry a webhook for this payment.
     * Incremented each time a webhook retry is attempted.
     */
    @Builder.Default
    @Column(name = "webhook_retry_count")
    private Integer webhookRetryCount = 0;

    public Integer getWebhookRetryCount() {
        return webhookRetryCount != null ? webhookRetryCount : 0;
    }
}
