@startuml Entity Class Diagram

!define ENTITY_COLOR #E8F4F8
!define WEAK_ENTITY_COLOR #FFF4E6

skinparam classBackgroundColor ENTITY_COLOR
skinparam classBorderColor #4A90E2
skinparam classArrowColor #4A90E2
skinparam classAttributeIconSize 0

' Base Entity
abstract class BaseEntity {
    {field} id: Integer
    {field} created_at: LocalDateTime
    {field} updated_at: LocalDateTime
}

' ========== Auth & User Management ==========
class Role {
    {field} id: Integer
    {field} name: String (unique)
    {field} description: String
    {method} + addUser(User)
    {method} + removeUser(User)
}

class User {
    {field} id: Integer
    {field} role_id: Integer (FK)
    {field} firstName: String
    {field} lastName: String
    {field} email: String (unique)
    {field} phone: String
    {field} passwordHash: String
    {field} avatarUrl: String
    {field} googleId: String
    {field} status: String
    {method} + addCourse(Course)
    {method} + removeCourse(Course)
    {method} + addOrder(Order)
    {method} + removeOrder(Order)
    {method} + addEnrollment(Enrollment)
    {method} + removeEnrollment(Enrollment)
}

' ========== Course Management ==========
class Category {
    {field} id: Integer
    {field} parent_id: Integer (FK, nullable)
    {field} name: String
    {field} description: String
    {field} status: String
    {method} + addCourse(Course)
    {method} + removeCourse(Course)
}

class Course {
    {field} id: Integer
    {field} instructor_id: Integer (FK)
    {field} category_id: Integer (FK)
    {field} approved_by: Integer (FK, nullable)
    {field} title: String
    {field} description: String
    {field} thumbnailUrl: String
    {field} price: BigDecimal
    {field} level: String
    {field} status: String
    {field} approved_at: LocalDateTime
    {method} + addSection(CourseSection)
    {method} + removeSection(CourseSection)
    {method} + addEnrollment(Enrollment)
    {method} + removeEnrollment(Enrollment)
    {method} + addFeedback(Feedback)
    {method} + removeFeedback(Feedback)
}

class CourseSection {
    {field} id: Integer
    {field} course_id: Integer (FK)
    {field} title: String
    {field} position: Integer
    {method} + addLesson(Lesson)
    {method} + removeLesson(Lesson)
}

class Lesson {
    {field} id: Integer
    {field} section_id: Integer (FK)
    {field} title: String
    {field} videoUrl: String
    {field} durationSeconds: Integer
    {field} position: Integer
    {field} published: Boolean
    {field} moderationStatus: String
    {method} + addQuiz(Quiz)
    {method} + removeQuiz(Quiz)
    {method} + addMaterial(LessonMaterial)
    {method} + removeMaterial(LessonMaterial)
    {method} + addModerationFlag(VideoModerationFlag)
    {method} + removeModerationFlag(VideoModerationFlag)
}

class LessonMaterial {
    {field} id: Integer
    {field} lesson_id: Integer (FK)
    {field} title: String
    {field} materialUrl: String
    {field} type: String
}

class VideoModerationFlag {
    {field} id: Integer
    {field} lesson_id: Integer (FK)
    {field} flaggedBy: String
    {field} reason: String
    {field} status: String
}

' ========== Quiz Management ==========
class Quiz {
    {field} id: Integer
    {field} lesson_id: Integer (FK)
    {field} title: String
    {field} passScore: Integer
    {method} + addQuestion(QuizQuestion)
    {method} + removeQuestion(QuizQuestion)
    {method} + addAttempt(QuizAttempt)
    {method} + removeAttempt(QuizAttempt)
}

class QuizQuestion {
    {field} id: Integer
    {field} quiz_id: Integer (FK)
    {field} questionText: String
    {field} questionType: String
    {field} points: Integer
    {field} position: Integer
    {method} + addAnswer(QuizAnswer)
    {method} + removeAnswer(QuizAnswer)
}

class QuizAnswer {
    {field} id: Integer
    {field} question_id: Integer (FK)
    {field} answerText: String
    {field} isCorrect: Boolean
    {field} position: Integer
}

class QuizAttempt {
    {field} id: Integer
    {field} quiz_id: Integer (FK)
    {field} user_id: Integer (FK)
    {field} score: Integer
    {field} attemptedAt: LocalDateTime
    {field} completedAt: LocalDateTime
}

' ========== Enrollment & Learning Progress ==========
class Enrollment {
    {field} id: Integer
    {field} user_id: Integer (FK)
    {field} course_id: Integer (FK)
    {field} progressPercent: BigDecimal
    {field} enrolledAt: LocalDateTime
    {field} completedAt: LocalDateTime
    {field} UQ: (user_id, course_id)
    {method} + addLessonProgress(LessonProgress)
    {method} + removeLessonProgress(LessonProgress)
}

class LessonProgress {
    {field} id: Integer
    {field} enrollment_id: Integer (FK)
    {field} lesson_id: Integer (FK)
    {field} completed: Boolean
    {field} lastAccessed: LocalDateTime
    {field} UQ: (enrollment_id, lesson_id)
}

' ========== Feedback & Reporting ==========
class Feedback {
    {field} id: Integer
    {field} user_id: Integer (FK)
    {field} course_id: Integer (FK)
    {field} rating: Integer
    {field} comment: String
    {field} status: String
}



' ========== Shopping Cart ==========
class Cart {
    {field} id: Integer
    {field} user_id: Integer (FK, unique)
    {method} + addItem(CartItem)
    {method} + removeItem(CartItem)
    {method} + addInstructorCoupon(CartInstructorCoupon)
    {method} + removeInstructorCoupon(CartInstructorCoupon)
}

class CartItem {
    {field} id: Integer
    {field} cart_id: Integer (FK)
    {field} course_id: Integer (FK)
    {field} UQ: (cart_id, course_id)
}

class CartInstructorCoupon {
    {field} id: Integer
    {field} cart_id: Integer (FK)
    {field} coupon_id: Integer (FK)
    {field} instructor_id: Integer (FK)
}

' ========== Coupon Management ==========
class Coupon {
    {field} id: Integer
    {field} instructor_id: Integer (FK)
    {field} code: String (unique)
    {field} discountPercent: BigDecimal
    {field} maxUses: Integer
    {field} usedCount: Integer
    {field} expiresAt: LocalDateTime
    {field} status: String
}

class CouponUsage {
    {field} id: Integer
    {field} coupon_id: Integer (FK)
    {field} user_id: Integer (FK)
    {field} usedAt: LocalDateTime
}

' ========== Order & Payment ==========
class Order {
    {field} id: Integer
    {field} user_id: Integer (FK)
    {field} totalAmount: BigDecimal
    {field} discountAmount: BigDecimal
    {field} status: String
    {field} paymentMethod: String
    {method} + addItem(OrderItem)
    {method} + removeItem(OrderItem)
    {method} + addPayment(Payment)
    {method} + removePayment(Payment)
}

class OrderItem {
    {field} id: Integer
    {field} order_id: Integer (FK)
    {field} course_id: Integer (FK)
    {field} price: BigDecimal
}

class Payment {
    {field} id: Integer
    {field} order_id: Integer (FK)
    {field} amount: BigDecimal
    {field} method: String
    {field} status: String
    {field} transactionId: String
    {field} paidAt: LocalDateTime
}

' ========== System Logging ==========
class SystemLog {
    {field} id: Integer
    {field} user_id: Integer (FK, nullable)
    {field} action: String
    {field} description: String
    {field} ipAddress: String
    {field} userAgent: String
}

class InstructorRequest {
    {field} id: Integer
    {field} user_id: Integer (FK)
    {field} reason: String
    {field} status: String
    {field} reviewedBy: Integer (FK, nullable)
    {field} reviewedAt: LocalDateTime
}

class PasswordResetToken {
    {field} id: Integer
    {field} user_id: Integer (FK)
    {field} token: String (unique)
    {field} expiresAt: LocalDateTime
    {field} usedAt: LocalDateTime
}

' ========== Relationships ==========

' === GENERALIZATION (Inheritance) ===
' All entities inherit from BaseEntity
BaseEntity <|-- Role
BaseEntity <|-- User
BaseEntity <|-- Category
BaseEntity <|-- Course
BaseEntity <|-- CourseSection
BaseEntity <|-- Lesson
BaseEntity <|-- LessonMaterial
BaseEntity <|-- VideoModerationFlag
BaseEntity <|-- Quiz
BaseEntity <|-- QuizQuestion
BaseEntity <|-- QuizAnswer
BaseEntity <|-- QuizAttempt
BaseEntity <|-- Cart
BaseEntity <|-- CartItem
BaseEntity <|-- CartInstructorCoupon
BaseEntity <|-- Order
BaseEntity <|-- OrderItem
BaseEntity <|-- Payment
BaseEntity <|-- Enrollment
BaseEntity <|-- LessonProgress
BaseEntity <|-- Feedback
BaseEntity <|-- Coupon
BaseEntity <|-- CouponUsage
BaseEntity <|-- SystemLog
BaseEntity <|-- InstructorRequest
BaseEntity <|-- PasswordResetToken

' === COMPOSITION (Strong ownership - child dies with parent) ===
' Cascade = ALL + orphanRemoval = true
Course *-- CourseSection : contains
CourseSection *-- Lesson : contains
Lesson *-- Quiz : has
Lesson *-- LessonMaterial : contains
Quiz *-- QuizQuestion : contains
QuizQuestion *-- QuizAnswer : has
Cart *-- CartItem : has
Cart *-- CartInstructorCoupon : contains
Order *-- OrderItem : contains
Order *-- Payment : processes
Enrollment *-- LessonProgress : tracks

' === AGGREGATION (Weak ownership - child can exist independently) ===
' No cascade or only PERSIST (not REMOVE)
Role o-- User : assigns
Category o-- Category : parent-child
Category o-- Course : categorizes
User o-- Course : creates (as instructor)
User o-- Order : places
User o-- Enrollment : enrolls
User o-- Feedback : gives
Lesson o-- VideoModerationFlag : has
Quiz o-- QuizAttempt : has
Course o-- Enrollment : has
Course o-- Feedback : receives
Enrollment o-- LessonProgress : measures

Coupon o-- CouponUsage : tracks
User o-- Cart : owns

' === ASSOCIATIONS (Regular 1-to-many or many-to-many - no ownership semantics) ===
' References without cascade
CourseSection --> Course : belongs to
Lesson --> CourseSection : in section
Quiz --> Lesson : part of
QuizQuestion --> Quiz : part of
QuizAnswer --> QuizQuestion : answer to
QuizAttempt --> User : by user
CartItem --> Course : contains
CartInstructorCoupon --> Coupon : applies
CartInstructorCoupon --> User : from instructor
Coupon --> User : created by
CouponUsage --> User : used by
OrderItem --> Course : contains
Payment --> Order : for order
LessonProgress --> Lesson : tracks
User --> Role : has role
User --> InstructorRequest : makes request
InstructorRequest --> User : reviewed by
PasswordResetToken --> User : for user
SystemLog --> User : by user

@enduml


